<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:background="#FF1A1A"
    android:layout_height="match_parent"
    style="@style/loginParent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">
<ScrollView
    style="@style/parent">

    <RelativeLayout
        style="@style/parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:weightSum="12">

            <LinearLayout
                style="@style/parent"
                android:background="@drawable/login_shape_bk"
                android:orientation="vertical"
                android:layout_weight="3">

                <ImageView
                    android:id="@+id/topdesign"
                    style="@style/parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_login_bk"
                    android:contentDescription="login background" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="96dp"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="@string/prompt_email"
                app:startIconDrawable="@drawable/ic_favorite_24dp">

                <EditText
                    android:id="@+id/txt_email"
                    style="@style/modifiedEditText"
                    android:hint="Email         @gmail.com"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                app:endIconMode="password_toggle"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"
                app:startIconDrawable="@drawable/ic_lock_24dp">

                <EditText
                    android:id="@+id/txtpassword"
                    style="@style/modifiedEditText"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    tools:ignore="SpeakableTextPresentCheck" />



            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/login_button_bk"
                android:text="@string/action_sign_in"
                android:textColor="@color/whiteTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Time_in"
                app:layout_constraintVertical_bias="0.2" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />



            <TextView
                android:id="@+id/new_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Register"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Time_in"
                app:layout_constraintVertical_bias="0.2" />

        </LinearLayout>



    </RelativeLayout>




</ScrollView>


</RelativeLayout>